# user-manual-rag

./: .gitignore  README.md  main.ipynb  main.py  package-lock.json  pyproject.toml
parsed_cache/: Getting_Started_with_SM_Datum_V7.2.4_2024_CT_EN.pdf.json  User_Manual_SM2_SE_Camera_CT_Ver.2.5.4_EN.pdf.json
src/: app.py  extractions_test.py  generator.py  ingest.py  main.ipynb  main.py  multimodal_loader.py  retriever.py  utils.py
src/parsed_cache/: image_metadata.json
src/storage/: docstore.json  index_store.json
