[project]
name = "technical-manual-rag"
version = "0.1.0"
description = "RAG system for technical user manuals"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "torch",
    "python-dotenv",
    "unstructured>=0.22.10",
    "llama-index-llms-google-genai>=0.9.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
